# puffy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_CN.md
clients/python/: README.md  pyproject.toml
clients/python/src/puffy_client/: __init__.py  client.py  exceptions.py  models.py
clients/python/tests/: test_client.py  test_models.py
crates/puffy-cli/: Cargo.toml
crates/puffy-cli/src/: main.rs
crates/puffy-core/: Cargo.toml
crates/puffy-core/src/: asset_bundle.rs  asset_events.rs  asset_job.rs  asset_pipeline.rs  audio_prep.rs  downloader.rs  lib.rs  local_api_jobs.rs  local_text_import.rs  local_whisper.rs  media_sources.rs  runtime.rs  structured_transcript.rs
docker/: entrypoint.sh  selfhosted.md
examples/: README.md  dify_puffy_video_summary.yml  langchain_video_rag.py  n8n_puffy_async_template.json  open_webui_local_research.md
runtime/: README.md  runtime.lock.json
