[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puffy-client"
version = "0.1.0"
description = "Small Python SDK for the Puffy public engine."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Puffy" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

